samples/_failures_safe/1761452109_126b45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a39a0a13.c: In function ‘main’:
./samples/SAFE/__tmp_a39a0a13.c:154:5: error: expected expression at end of input
  154 |     if (analyzer.word_count == 0)
      |     ^~
./samples/SAFE/__tmp_a39a0a13.c:154:5: error: expected declaration or statement at end of input
